// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers getGainersAndLosersByIndex: API Response Validation 1`] = `
Array [
  Object {
    "gainers": Array [
      "priority: any",
      "symbol: any",
      "identifier: any",
      "series: any",
      "open: any",
      "dayHigh: any",
      "dayLow: any",
      "lastPrice: any",
      "previousClose: any",
      "change: any",
      "pChange: any",
      "totalTradedVolume: any",
      "totalTradedValue: any",
      "lastUpdateTime: any",
      "yearHigh: any",
      "ffmc: any",
      "yearLow: any",
      "nearWKH: any",
      "nearWKL: any",
      "perChange365d: any",
      "date365dAgo: any",
      "chart365dPath: any",
      "date30dAgo: any",
      "perChange30d: any",
      "chart30dPath: any",
      "chartTodayPath: any",
      Object {
        "meta": Array [
          "symbol: any",
          "companyName: any",
          "industry: any",
          Object {
            "activeSeries": "any",
          },
          Object {
            "debtSeries": "any",
          },
          Object {
            "tempSuspendedSeries": "any",
          },
          "isFNOSec: any",
          "isCASec: any",
          "isSLBSec: any",
          "isDebtSec: any",
          "isSuspended: any",
          "isETFSec: any",
          "isDelisted: any",
          "isin: any",
        ],
      },
    ],
  },
  Object {
    "losers": Array [
      "priority: any",
      "symbol: any",
      "identifier: any",
      "series: any",
      "open: any",
      "dayHigh: any",
      "dayLow: any",
      "lastPrice: any",
      "previousClose: any",
      "change: any",
      "pChange: any",
      "totalTradedVolume: any",
      "totalTradedValue: any",
      "lastUpdateTime: any",
      "yearHigh: any",
      "ffmc: any",
      "yearLow: any",
      "nearWKH: any",
      "nearWKL: any",
      "perChange365d: any",
      "date365dAgo: any",
      "chart365dPath: any",
      "date30dAgo: any",
      "perChange30d: any",
      "chart30dPath: any",
      "chartTodayPath: any",
      Object {
        "meta": Array [
          "symbol: any",
          "companyName: any",
          "industry: any",
          Object {
            "activeSeries": "any",
          },
          Object {
            "debtSeries": "any",
          },
          Object {
            "tempSuspendedSeries": "any",
          },
          "isFNOSec: any",
          "isCASec: any",
          "isSLBSec: any",
          "isDebtSec: any",
          "isSuspended: any",
          "isETFSec: any",
          "isDelisted: any",
          "isin: any",
        ],
      },
    ],
  },
]
`;

exports[`Helpers getMostActiveEquities: API Response Validation 1`] = `
Array [
  Object {
    "byVolume": Array [
      "priority: any",
      "symbol: any",
      "identifier: any",
      "open: any",
      "dayHigh: any",
      "dayLow: any",
      "lastPrice: any",
      "previousClose: any",
      "change: any",
      "pChange: any",
      "ffmc: any",
      "yearHigh: any",
      "yearLow: any",
      "totalTradedVolume: any",
      "totalTradedValue: any",
      "lastUpdateTime: any",
      "nearWKH: any",
      "nearWKL: any",
      "perChange365d: any",
      "date365dAgo: any",
      "chart365dPath: any",
      "date30dAgo: any",
      "perChange30d: any",
      "chart30dPath: any",
      "chartTodayPath: any",
    ],
  },
  Object {
    "byValue": Array [
      "priority: any",
      "symbol: any",
      "identifier: any",
      "open: any",
      "dayHigh: any",
      "dayLow: any",
      "lastPrice: any",
      "previousClose: any",
      "change: any",
      "pChange: any",
      "ffmc: any",
      "yearHigh: any",
      "yearLow: any",
      "totalTradedVolume: any",
      "totalTradedValue: any",
      "lastUpdateTime: any",
      "nearWKH: any",
      "nearWKL: any",
      "perChange365d: any",
      "date365dAgo: any",
      "chart365dPath: any",
      "date30dAgo: any",
      "perChange30d: any",
      "chart30dPath: any",
      "chartTodayPath: any",
    ],
  },
]
`;
